--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
-  "files": [],
   "references": [
     {
       "path": "./projects/loja/tsconfig.app.json"
@@ -16,5 +15,9 @@
     {
       "path": "./projects/loja/e2e/tsconfig.json"
     }
-]
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true
+  }
 }
