Fix para testes unitarios; diagramacao da tela de login

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "projects/loja/src/styles.scss",
-              "projects/loja/src/fonts.scss"
+              "projects/loja/src/fonts.scss",
+              "projects/loja/src/modals.scss"
             ],
             "scripts": []
           },
