--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "projects/loja/src/styles.scss",
-              "projects/loja/src/fonts.scss"
+              "projects/loja/src/fonts.scss",
+              "projects/loja/src/modals.scss"
             ],
             "scripts": []
           },
@@ -124,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "loja"
 }
